--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/instructor-student-tracking
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+#
+# Set the debug properties to view system output
+#
+
