--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=springstudent
 #
 # Set the debug properties to view system output
 #
+
+#
+# Turn off the default error page if an exception is thrown.
+#
+#server.error.whitelabel.enabled=false
