--- a/rest-api-demo/pom.xml
+++ b/rest-api-demo/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+<!--    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.1.Final</version>
+    </dependency> -->
 	</dependencies>
 
 	<build>
