--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 # JDBC Properties to connect to database
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/instructor-student-tracking
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=jonny_b
+spring.datasource.password=Yomper45!
+spring.jpa.database=mysql
 
 #
 # Set the debug properties to view system output
