--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 # JDBC Properties to connect to database
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/instructor-student-tracking
-spring.datasource.username=jonny_b
-spring.datasource.password=Yomper45!
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.jpa.database=mysql
+
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #
 # Set the debug properties to view system output
